--- a/app/src/main/res/layout/fragment_segundo_fragment.xml
+++ b/app/src/main/res/layout/fragment_segundo_fragment.xml
@@ -4,17 +4,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".segundo_fragment">
+    tools:context=".segundo_fragment"
+    android:background="#8D80A8">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:id="@+id/tvRespuesta"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:text="Hola"
         android:textSize="50sp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/btnVolver"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
