--- a/app/src/main/res/layout/fragment_primer_fragment.xml
+++ b/app/src/main/res/layout/fragment_primer_fragment.xml
@@ -4,9 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".primer_fragment">
+    tools:context=".primer_fragment"
+    android:background="#93B1AE">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:id="@+id/tvNombre"
         android:layout_width="wrap_content"
@@ -25,7 +25,6 @@
         android:id="@+id/etNombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="232dp"
         android:hint="Intrduce tu nombre"
         app:layout_constraintTop_toBottomOf="@id/tvNombre"
         app:layout_constraintEnd_toEndOf="parent"
